@YELP_HELP_RULES@

HELP_ID = mate-cpufreq-applet
HELP_FILES = index.docbook legal.xml

HELP_MEDIA = figures/cpufreq-100.png \
		figures/cpufreq-25.png \
		figures/cpufreq-50.png \
		figures/cpufreq-75.png \
		figures/cpufreq-applet.png \
		figures/cpufreq-applet-preferences.png \
		figures/cpufreq-applet-preferences-smp.png \
		figures/cpufreq-applet-selector-both.png \
		figures/cpufreq-applet-selector.png

HELP_LINGUAS = ca cs de el en_GB es eu fi fr hu nl oc pt_BR ru sv uk zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
